# textx

./: .bugfinder.toml.example  .gitignore  ARCHITECTURE.md  README.md  bug_report.json  complete_audit_report.html  complete_audit_report.json  generate_bug_fix_report.py  generate_complete_audit_pdf.py  pyproject.toml
bugfinder/: __init__.py  api.py  cli.py  config.py  mcp_server.py  models.py  reporters.py  scanner.py
bugfinder/ai/: __init__.py  base.py  claude_client.py  openai_client.py  prompt_builder.py
bugfinder/analyzer/: ast_analyzer.py  generic_analyzer.py  hybrid_analyzer.py
bugfinder/cache/: cache_manager.py
tests/: test_analyzer_regressions.py  test_api.py  test_ast_enterprise.py  test_cache.py  test_chunking.py  test_deep_audit.py  test_merge.py
