[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "textx"
version = "0.1.0"
description = "Hybrid static + LLM codebase bug detector for Python projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BugFinder Contributors" }
]
keywords = ["static-analysis", "llm", "openai", "anthropic", "code-quality", "bug-detection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Environment :: Console"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
textx = "bugfinder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
